# photo_gallery

./: .gitignore  package-lock.json
.github/workflows/: npm-publish.yml
backend/: .env  Cargo.toml  server.js  user.json
backend/main/: settings.py
backend/src/: database.rs  lib.rs  main.rs  router.rs
backend/src/handlers/: email_handler.rs  errors.rs  media_handler.rs  mod.rs  user_handler.rs  verify_token_handler.rs
backend/src/routes/: errors.rs  media_routes.rs  mod.rs  user_routes.rs
backend/src/utils/: guard.rs  jwt.rs
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css  store.js
frontend/src/components/: Content.vue  Nav.vue  Sidebar.vue  Thumbnail.vue  UploadPhoto.vue  ViewPhoto.vue
frontend/src/router/: index.js
frontend/src/views/: Dashboard.vue  Login.vue  PasswordRecover.vue  PasswordReset.vue  Signup.vue  TestGround.vue
