[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "http1"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.0", features = ["mysql", "runtime-tokio","tls-native-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
dotenvy = "0.15.7"
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http =  { version = "0.6.1", features = ["cors"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
bcrypt = "0.15.1"
dotenvy_macro = "0.15.7"
thiserror = "2.0.2"
tracing = "0.1.40"

